# Botcraft

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: linuxbuild.yml  windowsbuild.yml
Examples/: CMakeLists.txt
Examples/5_ResidentSleeperExample/: CMakeLists.txt
Examples/5_ResidentSleeperExample/include/: ResidentSleeperBot.hpp
Examples/5_ResidentSleeperExample/src/: ResidentSleeperBot.cpp  main.cpp
include/botcraft/: Version.hpp
include/botcraft/Game/Entities/: EntityManager.hpp
